--- a/Whimsiblog/Views/BlogPosts/Create.cshtml
+++ b/Whimsiblog/Views/BlogPosts/Create.cshtml
@@ -17,9 +17,13 @@
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
+            <div class=form-group">
+                <label asp-for="Title" class="control-label"></label>
+                <select></select>
+            </div>
             <div class="form-group">
                 <label asp-for="Body" class="control-label"></label>
-                <input asp-for="Body" class="form-control" />
+                <textarea asp-for="Body" class="form-control"></textarea>
                 <span asp-validation-for="Body" class="text-danger"></span>
             </div>
             <div class="form-group">
