--- a/Whimsiblog/Views/Shared/_Layout.cshtml
+++ b/Whimsiblog/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -29,6 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="BlogPosts" asp-action="Index">Blog Posts</a>
                         </li>
                     </ul>
+                <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
