--- a/Whimsiblog/Views/BlogPosts/Create.cshtml
+++ b/Whimsiblog/Views/BlogPosts/Create.cshtml
@@ -6,6 +6,7 @@
 
 <h1>Create</h1>
 
+@*  TEMPORARILY DISABLED
 <h4>BlogPost</h4>
 <hr />
 <div class="row">
@@ -40,3 +41,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+*@
