--- a/Whimsiblog/Views/Blog/Edit.cshtml
+++ b/Whimsiblog/Views/Blog/Edit.cshtml
@@ -1,12 +1,15 @@
 ﻿@model DataAccessLayer.Model.Blog
 @{
-    ViewData["Title"] = "Create Blog";
+    ViewData["Title"] = "Edit Blog";
 }
 
-<h1>Create your blog</h1>
+<h1>Edit Blog</h1>
 
-<form asp-action="Create" method="post">
+<form asp-action="Edit" method="post">
     @Html.AntiForgeryToken()
+
+    <!-- /!\ keep the key so the POST knows which row to update /!\ -->
+    <input type="hidden" asp-for="BlogId" />
 
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
@@ -16,8 +19,8 @@
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Create</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+    <button type="submit" class="btn btn-primary">Save</button>
+    <a asp-action="Details" asp-route-id="@Model.BlogId" class="btn btn-secondary">Cancel</a>
 </form>
 
 @section Scripts {
