--- a/Whimsiblog/Views/Blog/Details.cshtml
+++ b/Whimsiblog/Views/Blog/Details.cshtml
@@ -17,6 +17,18 @@ else
 
             <dt class="col-sm-2">Name</dt>
             <dd class="col-sm-10">@Model.Name</dd>
+                <dt class="col-sm-2">Description</dt>
+            <dd class="col-sm-10">
+                @if (string.IsNullOrWhiteSpace(Model.Description))
+                {
+                    <span class="text-muted">No description</span> //If there is no description given
+                }
+                else
+                {
+                    @Model.Description // Retrive the description if we have it
+                }
+    </dd>
+
         </dl>
 
         <div class="mt-3">
