--- a/Whimsiblog/Views/Blog/Edit.cshtml
+++ b/Whimsiblog/Views/Blog/Edit.cshtml
@@ -19,6 +19,13 @@
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
+    <div class="mb-3">
+    <label asp-for="Description" class="form-label"></label>
+    <textarea asp-for="Description" class="form-control" rows="4"></textarea>
+    <span asp-validation-for="Description" class="text-danger"></span>
+    </div>
+
+
     <button type="submit" class="btn btn-primary">Save</button>
     <a asp-action="Details" asp-route-id="@Model.BlogId" class="btn btn-secondary">Cancel</a>
 </form>
