--- a/Whimsiblog/Views/Blog/Details.cshtml
+++ b/Whimsiblog/Views/Blog/Details.cshtml
@@ -17,7 +17,7 @@ else
 
             <dt class="col-sm-2">Name</dt>
             <dd class="col-sm-10">@Model.Name</dd>
-                <dt class="col-sm-2">Description</dt>
+            <dt class="col-sm-2">Description</dt>
             <dd class="col-sm-10">
                 @if (string.IsNullOrWhiteSpace(Model.Description))
                 {
@@ -27,7 +27,22 @@ else
                 {
                     @Model.Description // Retrive the description if we have it
                 }
-    </dd>
+            </dd>
+
+            <dt class="col-sm-2">Tags</dt>
+            <dd class="col-sm-10">
+                @if (Model.Tags != null && Model.Tags.Any())
+                {
+                    @foreach (var tag in Model.Tags)
+                    {
+                        <span class="badge bg-primary me-1">@tag.Name</span>
+                    }
+                }
+                else
+                {
+                    <span class="text-muted">No tags</span>
+                }
+            </dd>
 
         </dl>
 
