--- a/Whimsiblog/Views/Blog/Index.cshtml
+++ b/Whimsiblog/Views/Blog/Index.cshtml
@@ -41,6 +41,7 @@ else
             <thead>
                 <tr>
                     <th>Name</th>
+                    <th>Tags</th>
                     <th style="width:240px;"></th>
                 </tr>
             </thead>
@@ -49,6 +50,19 @@ else
             {
                     <tr>
                         <td>@item.Name</td>
+                        <td>
+                            @if (item.Tags != null && item.Tags.Any())
+                            {
+                                @foreach (var tag in item.Tags)
+                                {
+                                    <span class="badge bg-secondary me-1">@tag.Name</span>
+                                }
+                            }
+                            else
+                            {
+                                <span class="text-muted">No tags</span>
+                            }
+                        </td>
                         <td class="text-end">
                             <a class="btn btn-sm btn-outline-secondary" asp-action="Details" asp-route-id="@item.BlogId">Details</a>
                             <a class="btn btn-sm btn-outline-primary" asp-action="Edit" asp-route-id="@item.BlogId">Edit</a>
