--- a/Whimsiblog/Views/BlogPosts/Create.cshtml
+++ b/Whimsiblog/Views/BlogPosts/Create.cshtml
@@ -6,7 +6,6 @@
 
 <h1>Create</h1>
 
-@*  TEMPORARILY DISABLED
 <h4>BlogPost</h4>
 <hr />
 <div class="row">
@@ -18,7 +17,7 @@
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
-            <div class=form-group">
+            <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <select></select>
             </div>
@@ -41,4 +40,3 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-*@
