--- a/Whimsiblog/Views/BlogPosts/Index.cshtml
+++ b/Whimsiblog/Views/BlogPosts/Index.cshtml
@@ -15,6 +15,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Body)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -23,7 +26,8 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
-                <br />
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Body)
             </td>
             <td>
