[BStroik BEOR-2] Was going to chnage the banner to say "Hello userName" instead of the email. When I got into it, it seemed like it would take awhile, so I'll just add it as a new ticket.

--- a/Whimsiblog/Views/Shared/_LoginPartial.cshtml
+++ b/Whimsiblog/Views/Shared/_LoginPartial.cshtml
@@ -1,9 +1,17 @@
 @using System.Security.Principal
+@using System.Security.Claims
 
+@{
+    var userName =
+        User.FindFirst("name")?.Value // AAD display name
+        ?? User.FindFirst("preferred_username")?.Value
+        ?? User.Identity?.Name
+        ?? "User";
+}
 <ul class="navbar-nav">
 @if (User.Identity?.IsAuthenticated == true)
 {
-        <span class="navbar-text text-dark">Hello @User.Identity?.Name!</span>
+            <span class="navbar-text text-dark">Hello @userName</span>
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignOut">Sign out</a>
         </li>
