--- a/Whimsiblog/Views/BlogPosts/Create.cshtml
+++ b/Whimsiblog/Views/BlogPosts/Create.cshtml
@@ -17,7 +17,7 @@
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
-            <div class=form-group">
+            <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <select></select>
             </div>
