Created Views: Account/Register, Account/Login Created Controller: Account Created Controller Methods: Register, Login, Logout.

--- a/Whimsiblog/Views/Shared/_LoginPartial.cshtml
+++ b/Whimsiblog/Views/Shared/_LoginPartial.cshtml
@@ -13,13 +13,13 @@
 {
             <span class="navbar-text text-dark">Hello @userName</span>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignOut">Sign out</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Sign out</a>
         </li>
 }
 else
 {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignIn">Sign in</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogIn">Sign in</a>
         </li>
 }
 </ul>
