--- a/Whimsiblog/Views/Shared/_Layout.cshtml
+++ b/Whimsiblog/Views/Shared/_Layout.cshtml
@@ -57,6 +57,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Tags" asp-action="Index">Tags</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                        </li>
 
                         @if (User.Identity?.IsAuthenticated ?? false)
                             {
