--- a/Whimsiblog/Views/Profile/Edit.cshtml
+++ b/Whimsiblog/Views/Profile/Edit.cshtml
@@ -14,9 +14,9 @@
     <input asp-for="Id" type="hidden" />
 
     <div class="mb-3">
-        <label asp-for="DisplayName" class="form-label"></label>
-        <input asp-for="DisplayName" class="form-control" />
-        <span asp-validation-for="DisplayName" class="text-danger"></span>
+        <label asp-for="UserName" class="form-label"></label>
+        <input asp-for="UserName" class="form-control" />
+        <span asp-validation-for="UserName" class="text-danger"></span>
     </div>
 
     <div class="mb-3">
